state-chain/custom-rpc/src/tests/before_v7/snapshots/custom_rpc__tests__before_v7__account_info__broker_serialization.snap
---
source: state-chain/custom-rpc/src/tests/before_v7/account_info.rs
assertion_line: 43
expression: broker
---
{
  "role": "broker",
  "flip_balance": "0x0",
  "bond": "0x0",
  "earned_fees": {
    "Ethereum": {
      "ETH": "0x0",
      "FLIP": "0xde0b6b3a7640000",
      "USDC": "0x0",
      "USDT": "0x0",
      "WBTC": "0x0"
    },
    "Polkadot": {
      "DOT": "0x0"
    },
    "Bitcoin": {
      "BTC": "0x0"
    },
    "Arbitrum": {
      "ETH": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Solana": {
      "SOL": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Assethub": {
      "DOT": "0x0",
      "USDT": "0x0",
      "USDC": "0x0"
    },
    "Tron": {
      "TRX": "0x0",
      "USDT": "0x0"
    },
    "Bsc": {
      "BNB": "0x0",
      "USDT": "0x0"
    }
  },
  "affiliates": [
    {
      "account_id": "5C62Ck4UrFPiBtoCmeSrgF7x9yv9mn38446dhCpsi2mLHiFT",
      "short_id": 1,
      "withdrawal_address": "0xcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcfcf"
    }
  ],
  "btc_vault_deposit_address": "tb1pqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqszqgpqyqsn60vlk"
}
