state-chain/custom-rpc/src/tests/before_v7/snapshots/custom_rpc__tests__before_v7__account_info__lp_serialization.snap
---
source: state-chain/custom-rpc/src/tests/before_v7/account_info.rs
expression: to_pretty_json(&lp)
---
{
  "balances": {
    "Arbitrum": {
      "ETH": "0x1",
      "USDC": "0x2",
      "USDT": "0x0"
    },
    "Assethub": {
      "DOT": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Bitcoin": {
      "BTC": "0x0"
    },
    "Bsc": {
      "BNB": "0x0",
      "USDT": "0x0"
    },
    "Ethereum": {
      "CBBTC": "0x0",
      "ETH": "0xffffffffffffffffffffffffffffffff",
      "FLIP": "0x7fffffffffffffffffffffffffffffff",
      "USDC": "0x0",
      "USDT": "0x0",
      "WBTC": "0x0"
    },
    "Polkadot": {
      "DOT": "0x0"
    },
    "Solana": {
      "SOL": "0x3",
      "USDC": "0x4",
      "USDT": "0x0"
    },
    "Tron": {
      "TRX": "0x0",
      "USDT": "0x0"
    }
  },
  "boost_balances": {
    "Arbitrum": {
      "ETH": [],
      "USDC": [],
      "USDT": []
    },
    "Assethub": {
      "DOT": [],
      "USDC": [],
      "USDT": []
    },
    "Bitcoin": {
      "BTC": [
        {
          "available_balance": "0x2faf080",
          "fee_tier": 5,
          "in_use_balance": "0x2faf080",
          "is_withdrawing": false,
          "total_balance": "0x5f5e100"
        }
      ]
    },
    "Bsc": {
      "BNB": [],
      "USDT": []
    },
    "Ethereum": {
      "CBBTC": [],
      "ETH": [],
      "FLIP": [],
      "USDC": [],
      "USDT": [],
      "WBTC": []
    },
    "Polkadot": {
      "DOT": []
    },
    "Solana": {
      "SOL": [],
      "USDC": [],
      "USDT": []
    },
    "Tron": {
      "TRX": [],
      "USDT": []
    }
  },
  "earned_fees": {
    "Arbitrum": {
      "ETH": "0x1",
      "USDC": "0x2",
      "USDT": "0x3"
    },
    "Assethub": {
      "DOT": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Bitcoin": {
      "BTC": "0x0"
    },
    "Bsc": {
      "BNB": "0xa",
      "USDT": "0x28"
    },
    "Ethereum": {
      "CBBTC": "0x0",
      "ETH": "0x0",
      "FLIP": "0xffffffffffffffff",
      "USDC": "0x7ffffffffffffffe",
      "USDT": "0x0",
      "WBTC": "0x0"
    },
    "Polkadot": {
      "DOT": "0x0"
    },
    "Solana": {
      "SOL": "0x2",
      "USDC": "0x4",
      "USDT": "0x6"
    },
    "Tron": {
      "TRX": "0x0",
      "USDT": "0x0"
    }
  },
  "flip_balance": "0x0",
  "refund_addresses": {
    "Arbitrum": "0x0202020202020202020202020202020202020202",
    "Bitcoin": null,
    "Ethereum": "0x0101010101010101010101010101010101010101",
    "Polkadot": "111111111111111111111111111111111HC1",
    "Solana": null
  },
  "role": "liquidity_provider"
}
