state-chain/custom-rpc/src/tests/before_v7/snapshots/custom_rpc__tests__before_v7__account_info__no_account_serialization.snap
---
source: state-chain/custom-rpc/src/tests/before_v7/account_info.rs
expression: "to_pretty_json(&RpcAccountInfoBeforeV7::unregistered(0,\nany::AssetMap::default()))"
---
{
  "asset_balances": {
    "Arbitrum": {
      "ETH": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Assethub": {
      "DOT": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Bitcoin": {
      "BTC": "0x0"
    },
    "Bsc": {
      "BNB": "0x0",
      "USDT": "0x0"
    },
    "Ethereum": {
      "CBBTC": "0x0",
      "ETH": "0x0",
      "FLIP": "0x0",
      "USDC": "0x0",
      "USDT": "0x0",
      "WBTC": "0x0"
    },
    "Polkadot": {
      "DOT": "0x0"
    },
    "Solana": {
      "SOL": "0x0",
      "USDC": "0x0",
      "USDT": "0x0"
    },
    "Tron": {
      "TRX": "0x0",
      "USDT": "0x0"
    }
  },
  "flip_balance": "0x0",
  "role": "unregistered"
}
